--- a/client/package.json
+++ b/client/package.json
@@ -77,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-preset-es2015": "^6.24.1"
   }
 }
