--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
     "react-material-ui-carousel": "^3.4.2",
