--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -2,15 +2,11 @@
   publish = "build"
   command = "CI= npm run build"
 
-[functions]
-  directory = "netlify/functions"
-
 [[edge_functions]]
   path = "/ads/*"
   function = "ad-preview"
 
-[[redirects]]
-  from = "/ads/*"
-  to = "/.netlify/edge-functions/ad-preview"
-  status = 200
-  force = true
+  
+[[edge_functions]]
+  path = "/*"
+  function = "site-preview"
