--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,8 @@
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.1",
     "sonner": "^1.4.41",
+    "sweetalert2": "^11.11.0",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
