--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,8 @@
     "react-select": "^5.8.0",
     "react-slideshow-image": "^4.3.0",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "redux-state-sync": "^3.1.4",
     "socket.io-client": "^4.7.1",
     "sonner": "^1.4.41",
     "sweetalert2": "^11.11.0",
