--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-alpha.78",
     "@mui/material": "^5.12.3",
@@ -16,7 +18,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "emoji-mart": "^5.5.2",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-xhr-backend": "^3.2.2",
@@ -30,19 +31,15 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
-    "react-material-ui-carousel": "^3.4.2",
     "react-medium-image-zoom": "^5.1.8",
     "react-moment": "^1.1.3",
-    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "react-slideshow-image": "^4.3.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
-    "socket.io-client": "^4.7.1",
     "sonner": "^1.4.41",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
