--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-table": "^8.17.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,13 +38,16 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.3",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
