--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon app.js",
     "build": "npm i"
   },
   "dependencies": {
