--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
     "react-medium-image-zoom": "^5.1.8",
+    "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.21.0",
