added some admin statistics

--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "socket.io": "^4.7.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.15.0"
   }
 }
